make sure the generated text will not overlap the input field

--- a/Frontend/src/components/newPrompt/newPrompt.css
+++ b/Frontend/src/components/newPrompt/newPrompt.css
@@ -36,6 +36,7 @@
     /* Fixed position at bottom */
     left: 50%;
     transform: translateX(-50%);
+    bottom: 0px;
   }
 
   input {
